Fix build with Qt < 5.6

Also correct the other #ifdef because like QChar::Script_SignWriting
0e1f3aab11a4310595d8651c02ce5f9d60c93252 in qtbase.git introduced the
other enums as well. That commit was first released with Qt 5.6

BUG: 366789
CCMAIL: martin.sandsmark@kde.org
REVIEW: 128739