src/core/guesslanguage.cpp
@@ -489,7 +489,7 @@ GuessLanguagePrivate::GuessLanguagePrivate()
         case QChar::Script_WarangCiti:
             names = getNames(QLocale::VarangKshitiScript);
             break;
-#if QT_VERSION >= QT_VERSION_CHECK(5, 7, 0)
+#if QT_VERSION >= QT_VERSION_CHECK(5, 6, 0)
         case QChar::Script_Ahom:
             names = getNames(QLocale::AhomScript);
             break;
@@ -510,7 +510,9 @@ GuessLanguagePrivate::GuessLanguagePrivate()
         case QChar::Script_Inherited:
         case QChar::Script_Common:
         case QChar::Script_OldTurkic:
+#if QT_VERSION >= QT_VERSION_CHECK(5, 6, 0)
         case QChar::Script_SignWriting:
+#endif
             break;
         default:
             qCDebug(SONNET_LOG_CORE) << "Unhandled script" << script;
